--- a/index.html
+++ b/index.html
@@ -1,11 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
-</head>
-<body>
 
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Клуб четырёх коней</title>
+  <link rel="stylesheet" href="/css/style.css">
+
+</head>
+
+<body>
+  <main class="main">
+    <header class="header">
+      <div class="header-image">
+        <img src="img/Group-full.png" alt="">
+      </div>
+      <div class="header-block">
+        <div class="header-inner">
+          <div class="logo">
+            <img src="img/logo.svg" alt="Клуб четырёх коней" class="">
+          </div>
+
+          <div class="header-title">
+            <div class="">Превратите уездный город</div>
+            <div class="text-center">в столицу</div>
+            <div class="text-end">земного шара</div>
+          </div>
+          <div class="header-title-subject">Оплатите взнос на телеграммы для организации <br> Международного
+            васюкинского
+            турнира по шахматам</div>
+          <div class="header-buttons">
+            <button class="btn btn-black">Поддержать шахматную мысль</button>
+            <button class="btn btn-transparent">Подробнее о турнире</button>
+          </div>
+        </div>
+      </div>
+    </header>
+  </main>
+  <script src="js/main.js"></script>
 </body>
+
 </html>
