--- a/index.html
+++ b/index.html
@@ -35,7 +35,75 @@
           </div>
         </div>
       </div>
+      <!-- run text -->
+      <div class="tickers-inner">
+        <div class="ticker" aria-hidden="true">
+          <span class="ticker__head">Дело помощи утопающим — дело рук самих утопающих!</span>
+          <span class="ticker__head">&bull;</span>
+          <span class="ticker__head">Шахматы двигают вперед не только культуру, но и экономику!</span>
+          <span class="ticker__head">&bull;</span>
+          <span class="ticker__head">Лед тронулся, господа присяжные заседатели!</span>
+          <span class="ticker__head">&bull;</span>
+        </div>
+        <div class="ticker" aria-hidden="true">
+          <span class="ticker__head">Дело помощи утопающим — дело рук самих утопающих!</span>
+          <span class="ticker__head">&bull;</span>
+          <span class="ticker__head">Шахматы двигают вперед не только культуру, но и экономику!</span>
+          <span class="ticker__head">&bull;</span>
+          <span class="ticker__head">Лед тронулся, господа присяжные заседатели!</span>
+          <span class="ticker__head">&bull;</span>
+        </div>
+        <div class="ticker" aria-hidden="true">
+          <span class="ticker__head">Дело помощи утопающим — дело рук самих утопающих!</span>
+          <span class="ticker__head">&bull;</span>
+          <span class="ticker__head">Шахматы двигают вперед не только культуру, но и экономику!</span>
+          <span class="ticker__head">&bull;</span>
+          <span class="ticker__head">Лед тронулся, господа присяжные заседатели!</span>
+          <span class="ticker__head">&bull;</span>
+        </div>
+      </div>
+      <!-- end run text -->
     </header>
+
+
+    <footer class="footer">
+      <!-- run text -->
+      <div class="tickers-inner-footer">
+        <div class="ticker" aria-hidden="true">
+          <span class="ticker__head">Дело помощи утопающим — дело рук самих утопающих!</span>
+          <span class="ticker__head">&bull;</span>
+          <span class="ticker__head">Шахматы двигают вперед не только культуру, но и экономику!</span>
+          <span class="ticker__head">&bull;</span>
+          <span class="ticker__head">Лед тронулся, господа присяжные заседатели!</span>
+          <span class="ticker__head">&bull;</span>
+        </div>
+        <div class="ticker" aria-hidden="true">
+          <span class="ticker__head">Дело помощи утопающим — дело рук самих утопающих!</span>
+          <span class="ticker__head">&bull;</span>
+          <span class="ticker__head">Шахматы двигают вперед не только культуру, но и экономику!</span>
+          <span class="ticker__head">&bull;</span>
+          <span class="ticker__head">Лед тронулся, господа присяжные заседатели!</span>
+          <span class="ticker__head">&bull;</span>
+        </div>
+        <div class="ticker" aria-hidden="true">
+          <span class="ticker__head">Дело помощи утопающим — дело рук самих утопающих!</span>
+          <span class="ticker__head">&bull;</span>
+          <span class="ticker__head">Шахматы двигают вперед не только культуру, но и экономику!</span>
+          <span class="ticker__head">&bull;</span>
+          <span class="ticker__head">Лед тронулся, господа присяжные заседатели!</span>
+          <span class="ticker__head">&bull;</span>
+        </div>
+      </div>
+      <!-- end run text -->
+      <div class="footer-text-inner">
+        <div class="footer-text">Все персонажи, события и цитаты являются вымышленными и не принадлежат создателям
+          сайта.
+          С
+          подробностями можно
+          познакомиться в главе XXXIV романа Ильи Ильфа и Евгения Петрова «Двенадцать стульев».</div>
+      </div>
+
+    </footer>
   </main>
   <script src="js/main.js"></script>
 </body>
