--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="header-image">
         <img src="img/Group-full.png" alt="">
       </div>
-      <div class="header-block">
+      <div class="header-block container">
         <div class="header-inner">
           <div class="logo">
             <img src="img/logo.svg" alt="Клуб четырёх коней" class="">
@@ -64,45 +64,88 @@
       </div>
       <!-- end run text -->
     </header>
+    <section class="attend-the-lecture">
+      <div class="attend-the-lecture_inner container">
+        <div class="attend-the-lecture_text">
+          Чтобы поддержать <br> Международный васюкинский турнир посетите лекцию на тему:
+          <span>«Плодотворная дебютная идея»</span>
+        </div>
+        <div class="attend-the-lecture_img">
+          <img src="img/foto-group-chess-players.png" alt="Международный васюкинский турнир">
+        </div>
+      </div>
+    </section>
+    <section class="session">
+      <div class="session-inner container">
+        <div class="session-img">
+          <img src="img/foto-chess-player.png" alt="Сеанс одновременной игры в шахматы на 160 досках">
+        </div>
+        <div class="session-block">
+          <div class="session-text">и Сеанс
+            <span>одновременной игры в шахматы на 160 досках</span> гроссмейстера О. Бендера
+          </div>
+          <div class="session-table">
+            <div class="session-table_row">
+              <div class="session-table_th session-table_first">Место проведения:</div>
+              <div class="session-table_td session-table_first">Клуб «Картонажник»</div>
+            </div>
+            <div class="session-table_row">
+              <div class="session-table_th">Дата и время мероприятия:</div>
+              <div class="session-table_td">22 июня 1927 г. в 18:00</div>
+            </div>
+            <div class="session-table_row">
+              <div class="session-table_th">Стоимость входных билетов:</div>
+              <div class="session-table_td">20 коп.</div>
+            </div>
+            <div class="session-table_row">
+              <div class="session-table_th">Плата за игру:</div>
+              <div class="session-table_td">50 коп.</div>
+            </div>
+            <div class="session-table_row">
+              <div class="session-table_th session-table_last">Взнос на телеграммы:</div>
+              <div class="session-table_td session-table_last"><del>100 руб.</del>&nbsp; 21 руб. 16 коп.</div>
+            </div>
+          </div>
+          <div class="session-link">По всем вопросам обращаться в администрацию к К. Михельсону</div>
+        </div>
+      </div>
+    </section>
 
-
+    <!-- run text -->
+    <div class="tickers-inner-footer">
+      <div class="ticker" aria-hidden="true">
+        <span class="ticker__head">Дело помощи утопающим — дело рук самих утопающих!</span>
+        <span class="ticker__head">&bull;</span>
+        <span class="ticker__head">Шахматы двигают вперед не только культуру, но и экономику!</span>
+        <span class="ticker__head">&bull;</span>
+        <span class="ticker__head">Лед тронулся, господа присяжные заседатели!</span>
+        <span class="ticker__head">&bull;</span>
+      </div>
+      <div class="ticker" aria-hidden="true">
+        <span class="ticker__head">Дело помощи утопающим — дело рук самих утопающих!</span>
+        <span class="ticker__head">&bull;</span>
+        <span class="ticker__head">Шахматы двигают вперед не только культуру, но и экономику!</span>
+        <span class="ticker__head">&bull;</span>
+        <span class="ticker__head">Лед тронулся, господа присяжные заседатели!</span>
+        <span class="ticker__head">&bull;</span>
+      </div>
+      <div class="ticker" aria-hidden="true">
+        <span class="ticker__head">Дело помощи утопающим — дело рук самих утопающих!</span>
+        <span class="ticker__head">&bull;</span>
+        <span class="ticker__head">Шахматы двигают вперед не только культуру, но и экономику!</span>
+        <span class="ticker__head">&bull;</span>
+        <span class="ticker__head">Лед тронулся, господа присяжные заседатели!</span>
+        <span class="ticker__head">&bull;</span>
+      </div>
+    </div>
+    <!-- end run text -->
     <footer class="footer">
-      <!-- run text -->
-      <div class="tickers-inner-footer">
-        <div class="ticker" aria-hidden="true">
-          <span class="ticker__head">Дело помощи утопающим — дело рук самих утопающих!</span>
-          <span class="ticker__head">&bull;</span>
-          <span class="ticker__head">Шахматы двигают вперед не только культуру, но и экономику!</span>
-          <span class="ticker__head">&bull;</span>
-          <span class="ticker__head">Лед тронулся, господа присяжные заседатели!</span>
-          <span class="ticker__head">&bull;</span>
-        </div>
-        <div class="ticker" aria-hidden="true">
-          <span class="ticker__head">Дело помощи утопающим — дело рук самих утопающих!</span>
-          <span class="ticker__head">&bull;</span>
-          <span class="ticker__head">Шахматы двигают вперед не только культуру, но и экономику!</span>
-          <span class="ticker__head">&bull;</span>
-          <span class="ticker__head">Лед тронулся, господа присяжные заседатели!</span>
-          <span class="ticker__head">&bull;</span>
-        </div>
-        <div class="ticker" aria-hidden="true">
-          <span class="ticker__head">Дело помощи утопающим — дело рук самих утопающих!</span>
-          <span class="ticker__head">&bull;</span>
-          <span class="ticker__head">Шахматы двигают вперед не только культуру, но и экономику!</span>
-          <span class="ticker__head">&bull;</span>
-          <span class="ticker__head">Лед тронулся, господа присяжные заседатели!</span>
-          <span class="ticker__head">&bull;</span>
+      <div class="footer-text-inner container">
+        <div class="footer-text">
+          Все персонажи, события и цитаты являются вымышленными и не принадлежат создателям сайта. С подробностями можно
+          познакомиться в главе XXXIV романа Ильи Ильфа и Евгения Петрова «Двенадцать стульев».
         </div>
       </div>
-      <!-- end run text -->
-      <div class="footer-text-inner">
-        <div class="footer-text">Все персонажи, события и цитаты являются вымышленными и не принадлежат создателям
-          сайта.
-          С
-          подробностями можно
-          познакомиться в главе XXXIV романа Ильи Ильфа и Евгения Петрова «Двенадцать стульев».</div>
-      </div>
-
     </footer>
   </main>
   <script src="js/main.js"></script>
