--- a/index.html
+++ b/index.html
@@ -110,6 +110,118 @@
         </div>
       </div>
     </section>
+    <section class="stages">
+      <div class="stages-inner container">
+        <div class="stages-inner-title">
+          <div class="stages-title">Этапы&nbsp;</div>
+          <div class="stages-title"> преображения </div>
+          <div class="stages-title"> Васюков&nbsp;</div>
+          <div class="stages-subtitle">Будущие источники обогащения васюкинцев</div>
+        </div>
+        <div class="stages-blocks">
+          <div class="stages-blocks_airplane">
+            <img src="img/airplane.png" alt="аэроплан">
+          </div>
+          <div class="blocks-item item-1">
+            <div class="number"><img src="img/number1.png" alt="1"></div>
+            <div class="text">Строительство железнодорожной магистрали Москва-Васюки</div>
+          </div>
+          <div class="blocks-item item-2">
+            <div class="number"><img src="img/number2.png" alt="2"></div>
+            <div class="text">Открытие фешенебельной гостиницы «Проходная пешка» и других небоскрёбов</div>
+          </div>
+          <div class="blocks-item item-3">
+            <div class="number"><img src="img/number3.png" alt="3"></div>
+            <div class="text">Поднятие сельского хозяйства в радиусе на тысячу километров: производство овощей, фруктов,
+              икры, шоколадных конфет</div>
+          </div>
+          <div class="blocks-item item-4">
+            <div class="number"><img src="img/number4.png" alt="4"></div>
+            <div class="text">Строительство дворца для турнира</div>
+          </div>
+          <div class="blocks-item item-5">
+            <div class="number"><img src="img/number5.png" alt="5"></div>
+            <div class="text">Размещение гаражей для гостевого автотранспорта</div>
+          </div>
+          <div class="blocks-item item-6">
+            <div class="number"><img src="img/number6.png" alt="6"></div>
+            <div class="text">Постройка сверхмощной радиостанции для передачи всему миру сенсационных результатов</div>
+          </div>
+          <div class="blocks-item item-7">
+            <div class="number"><img src="img/number7.png" alt="7"></div>
+            <div class="text">Создание аэропорта «Большие Васюки» с регулярным отправлением почтовых самолётов и
+              дирижаблей во все концы света,
+              включая Лос-Анжелос и Мельбурн</div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="participants">
+      <div class="participants-inner container">
+        <div class="participants-header">
+          <div class="participants-title">Участники турнира</div>
+          <div class="participants-arrows">
+            <img src="img/arrow-left.png" alt="Налево" id="prev-button">
+            <div class="pages">3/6</div>
+            <img src="img/arrow-right.png" alt="Направо" id="next-button">
+          </div>
+        </div>
+        <div class="participants-slider">
+          <div class="slider-page">
+            <div class="slider-item">
+              <div class="slider-foto">
+                <img src="img/foto-chessmaster.png" alt="Чемпион мира по шахматам">
+              </div>
+              <div class="slider-name">Хозе-Рауль Капабланка</div>
+              <div class="slider-rank">Чемпион мира по шахматам</div>
+              <button class="slider-button">Подробнее</button>
+            </div>
+            <div class="slider-item">
+              <div class="slider-foto">
+                <img src="img/foto-chessmaster.png" alt="Чемпион мира по шахматам">
+              </div>
+              <div class="slider-name">Эммануил Ласкер</div>
+              <div class="slider-rank">Чемпион мира по шахматам</div>
+              <button class="slider-button">Подробнее</button>
+            </div>
+            <div class="slider-item">
+              <div class="slider-foto">
+                <img src="img/foto-chessmaster.png" alt="Чемпион мира по шахматам">
+              </div>
+              <div class="slider-name">Александр Алехин</div>
+              <div class="slider-rank">Чемпион мира по шахматам</div>
+              <button class="slider-button">Подробнее</button>
+            </div>
+          </div>
+          <div class="slider-page">
+            <div class="slider-item">
+              <div class="slider-foto">
+                <img src="img/foto-chessmaster.png" alt="Чемпион мира по шахматам">
+              </div>
+              <div class="slider-name">Арон Нимцович</div>
+              <div class="slider-rank">Чемпион мира по шахматам</div>
+              <button class="slider-button">Подробнее</button>
+            </div>
+            <div class="slider-item">
+              <div class="slider-foto">
+                <img src="img/foto-chessmaster.png" alt="Чемпион мира по шахматам">
+              </div>
+              <div class="slider-name">Рихард Рети</div>
+              <div class="slider-rank">Чемпион мира по шахматам</div>
+              <button class="slider-button">Подробнее</button>
+            </div>
+            <div class="slider-item">
+              <div class="slider-foto">
+                <img src="img/foto-chessmaster.png" alt="Чемпион мира по шахматам">
+              </div>
+              <div class="slider-name">Остап Бендер</div>
+              <div class="slider-rank">Чемпион мира по шахматам</div>
+              <button class="slider-button">Подробнее</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <!-- run text -->
     <div class="tickers-inner-footer">
