--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             васюкинского
             турнира по шахматам</div>
           <div class="header-buttons">
-            <button class="btn btn-black">Поддержать шахматную мысль</button>
+            <a href="#lecture"><button class="btn btn-black">Поддержать шахматную мысль</button></a>
             <button class="btn btn-transparent">Подробнее о турнире</button>
           </div>
         </div>
@@ -64,7 +64,7 @@
       </div>
       <!-- end run text -->
     </header>
-    <section class="attend-the-lecture">
+    <section class="attend-the-lecture" id="lecture">
       <div class="attend-the-lecture_inner container">
         <div class="attend-the-lecture_text">
           Чтобы поддержать <br> Международный васюкинский турнир посетите лекцию на тему:
